[END OF EXERCISE] dadi

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
     
+    <button id="throw-dice">LANCIA I DADI</button>
 
+   
     <!-- custom js -->
+    <script src="./js/main.js"></script>
+    <!-- /custom js -->
 </body>
 </html>
