[UPD] created visual graphics

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -5,12 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- custom css -->
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- /custom css -->
 </head>
 <body>
     
     <button id="throw-dice">LANCIA I DADI</button>
 
-   
+    <h3 id="text-output"></h3>
+
+    <div id="result">
+        <div class="dot-container">
+            <div class="dot" id="dot-a1"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-a2"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-a3"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-b1"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-b2"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-b3"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-c1"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-c2"></div>
+        </div>
+        <div class="dot-container">
+            <div class="dot" id="dot-c3"></div>
+        </div>
+    </div>
     <!-- custom js -->
     <script src="./js/main.js"></script>
     <!-- /custom js -->
